--- a/styles/components/daySpinner.module.css
+++ b/styles/components/daySpinner.module.css
@@ -12,8 +12,7 @@
 
 .dayCounter {
   position: absolute;
-  left: 5%;
-  top: 5%;
+  bottom: 2%;
   font-size: xx-large;
 }
 
@@ -106,4 +105,26 @@
   border-radius: 50%;
   top: -90px;
   right: 40px;
+}
+
+.star {
+  color: white;
+  font-size: 50px;
+  position: absolute;
+}
+
+.star:nth-of-type(2) {
+  font-size: 20px;
+}
+.star:nth-of-type(3) {
+  font-size: 50px;
+}
+.star:nth-of-type(4) {
+  font-size: 80px;
+}
+.star:nth-of-type(5) {
+  font-size: 60px;
+}
+.star:nth-of-type(6) {
+  font-size: 30px;
 }
